# MATLAB-Scientific-Programming

./: README.md
Data Fitting/: Lagrange.mw  Lagrange_MAS.bak  Report.aux  Report.tex  datafitting.py  destination_path.eps  example2.py  exercise3.py
Data Fitting/CesareDeCal/: Report.aux  Report.tex  exercise3.py  output.txt
Data Smoothing/: Report.aux  Report.tex  plotting.py
Data Smoothing/CesareDeCal_Exercise3/: Report.tex  plotting.py
Data Smoothing/Exercise 3/: CMakeLists.txt
Data Smoothing/WPExercise3/: main.c
Data Smoothing/untitled/: CMakeLists.txt  main.c
Linear Systems/: Report.aux  Report.tex  plotting.py
Linear Systems/CesareDeCal_Exercise7/: Report.tex  plotting.py
Linear Systems/exercise7/: CMakeLists.txt  main.c
Orthogonal Basis Function/: Report.aux  Report.tex  ale.m  chebyshev.m  chebyshev_plots.m  exercise3.m  exercise3.mlx  exercise3.m~  exercise6.m  fourier_demo.mw  our_function.m  test.m  xeven_plots.m  xodd_plots.m
Orthogonal Basis Function/CesareDeCal_Exercise3/: Report.tex  exercise3.m
Random Number Generation/: Report.aux  Report.tex
Random Number Generation/CesareDeCal-Exercise8/: Report.aux  Report.tex
Random Number Generation/Code/: main  main.cpp
Random Number Generation/Example/: Makefile  compile.sh  main  main.cpp  template  template.c  template.sh
Random Number Generation/MonteCarloExercise/: CMakeLists.txt  main.c
Random Number Generation/Presentation/: Presentation.aux  Presentation.nav  Presentation.out  Presentation.tex  Presentation.toc
Sample Latex/: Report.tex
(+6 files in other folders)
